Solved the background image problem on mobile by rescaling

--- a/lectures/probml/probml.css
+++ b/lectures/probml/probml.css
@@ -1,13 +1,6 @@
 body {
     margin:         0;
     padding:        0;
-    /* padding-bottom: 5em;
-    width:          100%;
-    background-image:       url("../../images/bg.jpg");
-    background-attachment:  fixed;
-    background-size:        cover;
-    background-position:    center;
-    z-index: -1; */
 }
 
 #bg1 {
@@ -27,6 +20,7 @@ body {
 #bg2 {
     position:   fixed;
     width:      100%;
+    min-height: 100%;
     height:     100vh; 
     z-index:    2;
     opacity:    1;
@@ -36,31 +30,9 @@ body {
 }
 
 #wrapper {
-    width:          100vw;
-    min-height:     100vh;
+    width:          calc(100vw-6em);
     margin-bottom:  3em;
     padding-bottom: 3em;
-
-    /* display: -moz-flex;
-    display: -webkit-flex;
-    display: -ms-flex;
-    display: flex;
-    -moz-flex-direction: column;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -moz-align-items: center;
-    -webkit-align-items: center;
-    -ms-align-items: center;
-    align-items: center;
-    -moz-justify-content: space-between;
-    -webkit-justify-content: space-between;
-    -ms-justify-content: space-between;
-    justify-content: space-between;
-    position: relative;
-    min-height: 100vh;
-    width: 100%; */
-
 }
 
 div.content {
